2015-03-26  H.J. Lu  <hongjiu.lu@intel.com>

	* common.h (ELFOSABI_CLOUDABI): New.
	(SHF_COMPRESSED): Likewise.
	(ELFCOMPRESS_ZLIB): Likewise.
	(ELFCOMPRESS_LOOS): Likewise.
	(ELFCOMPRESS_HIOS): Likewise.
	(ELFCOMPRESS_LOPROC): Likewise.
	(ELFCOMPRESS_HIPROC): Likewise.

2015-03-19  Nick Clifton  <nickc@redhat.com>

	* rl78.h (E_FLAG_RL78_G10): Redefine.
	(E_FLAG_RL78_CPU_MASK, E_FLAG_RL78_ANY_CPU, E_FLAG_RL78_G13
	E_FLAG_RL78_G14): New flags.

2015-02-19  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* aarch64.h (R_AARCH64_P32_TLSGD_ADR_PREL21): Add.

2015-02-24  Nick Clifton  <nickc@redhat.com>

	* v850.h (EF_RH850_SIMD): Delete deprecated flag.
	(EF_RH850_CACHE): Likewise.
	(EF_RH850_MMU): Likewise.
	(EF_RH850_DATA_ALIGN8): Likewise.
	(SHT_RENESAS_IOP): Fix typo in name.
	(SHT_RENESAS_INFO): Define.
	(V850_NOTE_SECNAME): Define.
	(SIZEOF_V850_NOTE): Define.
	(V850_NOTE_NAME): Define.
	(enum v850_notes): New enum.
	(NUM_V850_NOTES): Define.

2015-02-23  Nick Clifton  <nickc@redhat.com>

	PR 17915
	* score.h: Fix typo in license header.

2015-02-20  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* common.h (NT_S390_VXRS_LOW): New macro.
	(NT_S390_VXRS_HIGH): Likewise.

2015-01-28  James Bowman  <james.bowman@ftdichip.com>

	* common.h (EM_FT32): Define.
	* ft32.h: New file.

2015-01-09  Anthony Green  <green@moxielogic.com>

	* common.h (EM_MOXIE): Redefine to official number.
	(EM_MOXIE_OLD): Define (from old number).

2015-01-01  Alan Modra  <amodra@gmail.com>

	Update year range in copyright notice of all files.

2014-12-25  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* arm.h: New AEABI_FP_number_model_* and AEABI_VFP_args_* enum values.

2014-12-06  Eric Botcazou  <ebotcazou@adacore.com>

	* common.h (EM_VISIUM): Define.
	* visium.h: New file.

2014-11-13  H.J. Lu  <hongjiu.lu@intel.com>

	* x86-64.h (R_X86_64_GOTPLT64): Mark it obsolete.

2014-10-17  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc.h (ELF_SPARC_HWCAP2_VIS3B): Documentation improved.