@@ -115,6 +115,14 @@ typedef struct elf_internal_shdr {
   unsigned char *contents;		/* Section contents.  */
 } Elf_Internal_Shdr;
 
+/* Compression header */
+
+typedef struct elf_internal_chdr {
+  unsigned int	ch_type;		/* Type of compression */
+  bfd_size_type	ch_size;		/* Size of uncompressed data in bytes */
+  bfd_vma	ch_addralign;		/* Alignment of uncompressed data */
+} Elf_Internal_Chdr;
+
 /* Symbol table entry */
 
 struct elf_internal_sym {
